data/derived/fa15/progs/unify/prog1364.ml.out
Characters 130-132:
  ((sum/10)::a1,(sum mod 10)::a2) in
             ^^
Error: This expression has type int list -> int
       but an expression was expected of type int list
